# OS

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: llmos-hpc.yaml  llmos.yaml
docker/: Dockerfile  entrypoint.sh
llmos/: __init__.py  config.py  main.py  ollama_client.py  shell.py
llmos/agents/: __init__.py  base.py  coordinator.py
llmos/containers/: __init__.py  manager.py
llmos/memory/: store.py
llmos/plugins/: __init__.py  loader.py
llmos/remote/: __init__.py  executor.py
llmos/reports/: generator.py
llmos/scheduler/: __init__.py  queue.py  runner.py
llmos/tools/: __init__.py  agent_tools.py  container_tools.py  filesystem.py  gpu.py  memory_tools.py  network.py  packages.py  plugin_tools.py  process.py  registry.py  remote_tools.py  report_tools.py  scheduler_tools.py  scientific.py  versioning_tools.py  visualization_tools.py  voice_tools.py
llmos/versioning/: __init__.py  tracker.py
llmos/voice/: __init__.py  interface.py
llmos/webui/: __init__.py  server.py
llmos/webui/static/: app.js  index.html  style.css
packer/: llmos.pkr.hcl  variables.pkrvars.hcl
packer/http/: meta-data  user-data
packer/scripts/: cleanup.sh  provision-scientific.sh  provision.sh  pull-model.sh
scripts/: first-boot.sh  install.sh  kiosk-start.sh  setup-gpu-passthrough.sh  setup-ollama.sh
systemd/: llmos-firstboot.service  llmos-web.service  llmos.service  ollama.service
tests/: test_config.py  test_filesystem.py  test_registry.py  test_scheduler.py  test_versioning.py  test_webui.py
