[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llmos"
version = "1.0.0"
description = "LLM-OS: A Linux operating system with Ollama as its core intelligence"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM-OS Project" }]
keywords = ["llm", "os", "ollama", "shell", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Operating System",
]

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-psutil",
]

[project.scripts]
llmos = "llmos.main:main"

[project.urls]
Repository = "https://github.com/mtalafha90/OS"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
