[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llmos"
version = "1.0.0"
description = "LLM-OS: A Linux operating system with Ollama as its core intelligence"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM-OS Project" }]
keywords = ["llm", "os", "ollama", "shell", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Operating System",
]

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]
sci = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "kaleido>=0.2",
    "scikit-learn>=1.5",
    "h5py>=3.11",
    "netCDF4>=1.7",
    "dask[complete]>=2024.1",
    "numba>=0.60",
    "mpi4py>=3.1",
    "jupyterlab>=4.2",
    "tqdm>=4.66",
]
gpu = [
    "torch>=2.3",
    "cupy-cuda12x>=13.0",
]
memory = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "pyttsx3>=2.90",
]
remote = [
    "paramiko>=3.4",
]
reports = [
    "reportlab>=4.2",
    "weasyprint>=62.0",
]
all = [
    "llmos[web,sci,gpu,memory,voice,remote,reports]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-psutil",
]

[project.scripts]
llmos = "llmos.main:main"

[project.urls]
Repository = "https://github.com/mtalafha90/OS"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
